--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
       </div>
     </div>
 
+    <h2 class="section-title">About Us</h2>
+    <p class="about-en">
+        Trading in stainless steel and metals, general procurement and supplies and Trading in agricultural machinery and supplies, irrigation network systems, and general supplies. Subject to the provisions of the law, the company is permitted to establish and operate a factory for the manufacturing of plastic products for the purposes of investment and agricultural land reclamation, in accordance with Prime Minister’s Decree No. 350 of 2007 and Presidential Decree No. 356 of 2008. <br /><br />
+        The company may also have an interest in or participate in any manner with other companies or entities engaged in similar activities or those that may assist in achieving the company’s objectives, whether inside Egypt or abroad.
+    </p>
+
+
     <h2 class="section-title">من نحن</h2>
     <p class="about-ar">
   تجارة الستاليستيل والمعادن , التوريدات العمومية وتجارة الآلات الزراعية ومستلزمات شبكات الري والتوريدات العمومية، ويجوز – في حدود ما هو مسموح به قانونًا – إقامة وتشغيل مصنع لتصنيع المنتجات البلاستيكية بغرض الاستثمار والاستصلاح الزراعي، وذلك مع مراعاة ما ورد بقرار رئيس مجلس الوزراء رقم ٣٥٠ لسنة ٢٠٠٧، وقرار رئيس الجمهورية رقم ٣٥٦ لسنة ٢٠٠٨. <br /><br />
@@ -86,11 +93,7 @@
    .
     </p>
 
-    <h2 class="section-title">About Us</h2>
-    <p class="about-en">
-        Trading in agricultural machinery and supplies, irrigation network systems, and general supplies. Subject to the provisions of the law, the company is permitted to establish and operate a factory for the manufacturing of plastic products for the purposes of investment and agricultural land reclamation, in accordance with Prime Minister’s Decree No. 350 of 2007 and Presidential Decree No. 356 of 2008. <br /><br />
-        The company may also have an interest in or participate in any manner with other companies or entities engaged in similar activities or those that may assist in achieving the company’s objectives, whether inside Egypt or abroad.
-    </p>
+   
 
     <div class="contact-section">
         <div class="contact-item">
