--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1 class="main-title">Elgazira Supplies</h1>
 
     <div class="welcome-section">
-        <h2 class="welcome">Welcome to Elgazira supplies</h2>
+        <h2 class="welcome">Welcome To Elgazira Supplies</h2>
         <p class="info">
           Location: 
           <a href="https://maps.app.goo.gl/jQ4A2Gpk55aH5km46" target="_blank" rel="noopener noreferrer" class="location-link-black">
@@ -78,6 +78,10 @@
         <img src="gzira3.jpg" alt="Image 3" />
       </div>
     </div>
+    <div class="logo-watermark">
+  <img src="logo.png" alt="Elgazira Logo" />
+</div>
+
 
     <h2 class="section-title">About Us</h2>
     <p class="about-en">
